<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/menu_setting"
        android:key="pref_key_storage_settings"
        >

        <ListPreference
            android:key="time_interval_list_preference"
            android:title="@string/setting_interval_time"
            android:entries="@array/time_interval_entry"
            android:entryValues="@array/time_interval_entry_values"
            android:defaultValue="@string/default_interval"
            android:dialogTitle="@string/setting_interval_time"
            />
        <ListPreference
            android:key="record_count_list_preference"
            android:title="@string/setting_count"
            android:entries="@array/record_count"
            android:entryValues="@array/record_count"
            android:defaultValue="@string/default_count"
            android:dialogTitle="@string/setting_count"
        />
    </PreferenceCategory>

</PreferenceScreen>